# Smart-Parking-Lot-Management-System

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
App-Backend-Frontend/: lambda_get.py  lambda_post.py
Edge-Device-Code/: main.py  parking_app.py  utils.py
Model-Training/: args.yaml
Model-Training/Smart-Parking-Lot-AI-system/yolov8n_parking/: args.yaml
