[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-parking-lot-ai-system"
version = "0.1.0"
description = "Real-time edge parking lot occupancy detection using YOLOv8, OAK-D, and AWS"
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}
authors = [
    {name = "Naimul Hridoy", email = "naimul.hridoy214@gmail.com"}
]
dependencies = [
    "flask>=3.0.0",
    "boto3>=1.34.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "depthai>=2.24.0",
    "streamlit>=1.30.0",
    "streamlit-drawable-canvas>=0.9.3",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
training = [
    "ultralytics==8.0.196",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
